<resources>
    <string name="app_name">MZ커뮤니티</string>
    <string name="nothing">nothing</string>
    <string name="unknown_user">알 수 없는 사용자</string>
    <string name="board_content">게시글의 내용을 입력해주세요</string>
    <string name="input_email">\@ 이메일입력</string>
    <string name="input_password">🔒 비밀번호 입력</string>
    <string name="password_check">🔒 비밀번호 확인</string>
    <string name="complete">완료</string>
    <string name="board_hint">게시글의 내용을 입력해주세요</string>
    <string name="edit">수정하기</string>
    <string name="posting">등록</string>
    <string name="comment">댓글</string>
    <string name="post_comment">답글달기</string>
    <string name="show_comment">답글 더 보기</string>
    <string name="comment_hint">댓글을 입력하세요 ...</string>
    <string name="loading">로딩중입니다 ...</string>
    <string name="choice1">짜장면</string>
    <string name="no_posting">게시글이 존재하지 않습니다</string>
    <string name="inputTitle">문제의 제목을 입력해주세요</string>
    <string name="opinion1Hint">의견1 의 내용을 입력해주세요</string>
    <string name="opinion2Hint">의견2 의 내용을 입력해주세요</string>
    <string name="choice2">짬뽕</string>
    <string name="share">공유</string>
    <string name="next">다음</string>
    <string name="choose_images">업로드할 이미지 선택</string>
    <string name="daily_board">일상 게시글</string>
    <string name="balance_board">벨런스게임 게시글</string>
    <string name="choose_board">게시판을 선택해주세요</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="start_with_google">구글로 시작</string>
    <string name="new_posting">새 게시물</string>
    <string name="web_client_id">182206387797-937s8p4la5t3ege43gubj51j453h57gt.apps.googleusercontent.com</string>


</resources>