<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="view.BottomSheetFragment">

    <TextView
        android:text="@string/comment"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/line_color"
        />

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/loading"
        android:gravity="center"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/line_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:padding="10dp"
            android:layout_weight="9"
            android:imeOptions="actionDone"
            android:hint="@string/comment_hint" />

        <ImageButton
            android:id="@+id/postComment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/post_comment"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>



</LinearLayout>